my profile page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Hello, I'm Afonso! ✌</h1>
         <img src="images/selfie Afonso2.jpg" alt="Afonso Garcia">
       <p>
-        I'm an entrepreneur.
+        I'm an entrepreneur who loves to travel, meet new places and people.
       </p>
       </div>
       <div class="card">
